[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-style-coding-agent"
version = "0.1.0"
description = "A local Python multi-agent coding agent with a Codex-style review and repair loop."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
coding-agent = "coding_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
